# cc-proxy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  config.yaml  install.sh  package-lock.json  package.json  pyproject.toml  run.sh  tsconfig.json
src/: claude-cli.ts  config.ts  env-resolver.ts  index.ts  jsonl-reader.ts  path-utils.ts  project-store.ts  server.ts  session-store.ts  types.ts
src/cc_proxy/: __init__.py  claude_cli.py  config.py  jsonl_reader.py  models.py  path_utils.py  project_store.py  server.py  session_store.py
tests/: test_jsonl_reader.py  test_path_utils.py  test_session_store.py
